# Shallow-Blue

./: .gitignore  README.md
engine/: CMakeLists.txt  package-lock.json  package.json  scripts.cmaker
engine/src/: CMakeLists.txt  lib.cpp
engine/src/engine/: CMakeLists.txt  common.hpp  engine.cpp  engine.hpp  fen.cpp  fen.hpp  game.cpp  game.hpp
test/: package-lock.json  package.json
test/client/public/: index.html
test/client/src/: App.js
test/client/src/util/: fetchMove.js
test/server/: engine.js  package-lock.json  package.json  server.js
test/src/: App.js
test/src/components/util/: useWindowDimensions.js
